--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Beta3 
	- Added ability to edit artist/albums and flag all songs under them
		for re-tagging. 
	- Fixed charset of XML documents returned (Thx blueorder)
	- Fixed ORDER BY `track` that was missing on play selected and 
		reduced it to a single query, rather then one per object
	- Fixed ip history being tracked even if disabled in config
	- Improved performance of icon rendering due to increased use
	- Added error handling for if /config/ampache.cfg.php.dist is 
		not readable
	- Added new Icons from http://www.famfamfam.com from the Silk
		subset. (Thx kalrnux && Mark James)

--------------------------------------------------------------------------
  v.3.3.3-Beta2 12/18/2006: 
	- Fixed a bug that prevented adding new songs to the catalog.
	- Removed a upload preference that I missed.
	- Timezone setting actually works


--------------------------------------------------------------------------
  v.3.3.3-Beta1 12/18/2006 
  	- Moved Comment information to seperate table and added lyrics
		row, no support for lyrics yet though.
  	- Removed Upload functionality (broken, and time better spent on
		other features)
  	- Added Recommendations based on Ratings to Stats page
  	- Encoded the LastFM password so that it isn't displayed or
		stored in plain text. 
  	- Fixed an issue with Admin -> Streaming -> Localplay Level
		not correctly displaying the current setting
  	- Integrated LastFM plugin per user requests. 
	- Added /bin/delete_disabled.php.inc to delete any disabled
		songs in your DB, defaults to Debug only mode
	- Fixed display issue with players that ignore EXTINF in m3us
		(Thx AlxRogan)