@@ -5,9 +5,8 @@
  All rights reserved.
 
  This program is free software; you can redistribute it and/or
- modify it under the terms of the GNU General Public License
- as published by the Free Software Foundation; either version 2
- of the License, or (at your option) any later version.
+ modify it under the terms of the GNU General Public License v2
+ as published by the Free Software Foundation.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -33,9 +32,6 @@ $songs = $catalog->get_disabled(10);
 
 <?php show_box_top(_('Last Ten Flagged Records')); ?>
 	<?php require (conf('prefix') . '/templates/show_flagged.inc.php'); ?>
-	<div class="text-action">
-	<a href="<?php echo $web_path; ?>/admin/flag.php?action=show_flagged"><?php echo _('Show All'); ?>...</a>
-	</div>
 <?php show_box_bottom(); ?>
 
 <?php show_box_top(_('Disabled Songs')); ?>
